test/testdata/variables/undefined_access_error_local.lox
{
    var a;
    print a; // error: a has not been defined
}
